sugar-toolkit (0.81.5-1) unstable; urgency=low

  * New upstream release.

 -- Jonas Smedegaard <dr@jones.dk>  Fri, 20 Jun 2008 20:43:49 +0200

sugar-toolkit (0.81.4-2) unstable; urgency=medium

  * Add patch 2002 to ignore debian subdir and .pc quilt subdir when
    packaging bundles (since version 0.81.4 the MANIFEST file is ignored
    and instead everything but an internally hardcoded exception list is
    included).
  * Set urgency=medium as -1 causes FTBFS for sugar activities.

 -- Jonas Smedegaard <dr@jones.dk>  Wed, 11 Jun 2008 03:30:01 +0200

sugar-toolkit (0.81.4-1) unstable; urgency=low

  * New upstream release.
  * Update debian/copyright:
    + Really adjust paths as promised in 0.79.7-1
    + Update copyright year and license owner for
      src/sugar/activity/bundlebuilder.py
  * Update copyright-hints regarding above mentioned bundlebuilder.py.

 -- Jonas Smedegaard <dr@jones.dk>  Mon, 09 Jun 2008 12:22:13 +0200

sugar-toolkit (0.81.3-1) unstable; urgency=low

  * New upstream release.
  * Unfuzz patches.
  * Mention po/Makefile.in.in (freeware) in debian/copyright.  Update
    debian/copyright-hints.

 -- Jonas Smedegaard <dr@jones.dk>  Mon, 26 May 2008 10:42:48 +0200

sugar-toolkit (0.79.7-1) unstable; urgency=low

  * New upstream release.
  * Unfuzz patches (most of sources moved sugar -> src/sugar).
  * Drop patch 1003 fixing zip-based bundle install (upstream identical
    fix applied within an hour(!) from the earlier Debian patch).
  * Mention new file src/sugar/presence/sugartubeconn.py in
    debian/copyright (LGPL-2.1+) and update paths, thanks to local
    copyright-check.mk cdbs snippet. Update debian/copyright-hints.
  * Rewrite debian/copyright to only mention each licensing string once.

 -- Jonas Smedegaard <dr@jones.dk>  Sat, 24 May 2008 21:51:37 +0200

sugar-toolkit (0.79.6-3) unstable; urgency=medium

  * Recommend sugar-journal-activity (not bogus sugar-journal-service).
    Closes: bug#480857, thanks to Holger Levsen.