@@ -1,8 +1,16 @@
 sugar-toolkit (0.81.5-1) unstable; urgency=low
 
   * New upstream release.
+  * Update local cdbs snippets:
+    + Relax copyright-check to only warn about its discoveries.  Closes:
+      bug#486987.
+    + Update dependency cleanup to strip cdbs 0.4.27 (not 0.4.27-1).
+  * Update debian/copyright (new files, same owners and licenses).
+    Update debian/copyright-hints.
+  * Semi-auto-update debian/control to update build-dependencies:
+      DEB_AUTO_UPDATE_DEBIAN_CONTROL=yes fakeroot debian/rules clean
 
- -- Jonas Smedegaard <dr@jones.dk>  Fri, 20 Jun 2008 20:43:49 +0200
+ -- Jonas Smedegaard <dr@jones.dk>  Fri, 20 Jun 2008 20:57:43 +0200
 
 sugar-toolkit (0.81.4-2) unstable; urgency=medium
 
